deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eya46eya46
  labels:
    app.kubernetes.io/name: eya46eya46
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /__deploy
            pathType: Prefix
            backend:
              service:
                name: deploy-webhook
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eya46eya46
                port:
                  name: http
